--- a/website/src/_includes/footer.html
+++ b/website/src/_includes/footer.html
@@ -1,5 +1,5 @@
 {% set lang = page.url | getlang %}
-<section class="bg-[#D9E7ED] dark:bg-[#0E2B57] py-[50px] footer">
+<section class="bg-[#D9E7ED] dark:bg-[#0E2B57] py-[50px] footer page">
     <div class="container">
         <div class="flex flex-col lg:flex-row justify-between">
             <div class="flex flex-col items-center lg:items-start">
