add learn_more.md section in /learn-more page

--- a/website/src/_includes/layouts/main.html
+++ b/website/src/_includes/layouts/main.html
@@ -27,6 +27,7 @@
         <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon.ico"/>
 
         <link rel="stylesheet" href="/css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="/css/blog.css">
         <link href="/css/tailwind.css" rel="stylesheet"/>
         <link rel="stylesheet" href="/css/style.css">
         <script async defer src="https://buttons.github.io/buttons.js"></script>
