--- a/website/src/css/blog.css
+++ b/website/src/css/blog.css
@@ -190,12 +190,12 @@ h3::before {
   outline: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+#article h1,
+#article h2,
+#article h3,
+#article h4,
+#article h5,
+#article h6 {
   clear: both;
 }
 
@@ -220,7 +220,7 @@ h6 {
 }
 
 @media (max-width:768px) {
-  img {
+  #article img {
     width: 100%;
   }
 }
